Rane has been to bring the rain and he has sorted out the css issue with adding the boxes in the middle by hiding the top of three lines of text so it fits on the page. Have wrapped the last bits of code in functions as decreed by Ollie

--- a/CSS/app.css
+++ b/CSS/app.css
@@ -1,9 +1,9 @@
 body {
+  margin: 0 auto;
+  max-width: 960px;
   background-color: #2c3e50;
-  margin-bottom: 60px;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
-/*  font-weight: bold; 
-*/  color: white;
+  color: white;
 
 }
   
@@ -16,11 +16,11 @@ body {
   font-color: bold;
   font-size: 50px;
   text-align: center;
+  padding: 10px;
 }
 .container {
   width: 1000px;
   height: 600px;
-  margin-left: 200px;
   border: 1px;
   border-color: black;
   text-align: center;
@@ -118,9 +118,9 @@ p {
   color: #d35400;
   border-color: #d35400;
   border: 3px solid;
-  margin-left: 1px;
-  margin-bottom: 1px;
-  margin-top: 1px;
+  margin-bottom: 5px;
+  margin-top: 25px;
+
 }
 
 .tile {
@@ -142,7 +142,7 @@ p {
   margin-top: 0 px;
 }
 
-#space1 {
+/*#space1 {
   width: 50px;
   height: 50px;
   list-style: none;
@@ -152,22 +152,23 @@ p {
   opacity: 9;
   line-height: 50px; 
   font-size: 20px;
-  /*position: relative;*/
   background-color: #2c3e50;
   color: #d35400;
   border-color: #d35400;
   border: 3px solid;
   margin-left: 40px;
   margin-top: 0px;
-}
+}*/
+
+/*#space1 .space {
+  width: 200px;
+}*/
 .tile:hover {
  background-color: #34495e;
  border-color: #d35400;
- color: #d35400; }
+ color: #d35400;
 }
 
-.space1:hover {
- background-color: #34495e;
- border-color: #d35400;
- color: #d35400; }
+.space1 li#_ {
+  width: 400px;
 }
